--- a/server/package.json
+++ b/server/package.json
@@ -19,18 +19,17 @@
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.10.2",
         "prettier": "3.4.2",
-        "prisma": "^6.1.0",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
         "vitest": "^2.1.8"
     },
     "dependencies": {
-        "@prisma/client": "^6.1.0",
         "cors": "^2.8.5",
         "express": "^4.21.2",
         "helmet": "^8.0.0",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.12.2",
         "morgan": "^1.10.0"
     }
 }
